# timmx

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml
src/timmx/: __init__.py  __main__.py  cli.py  errors.py
src/timmx/export/: __init__.py  base.py  calibration.py  common.py  coreml_backend.py  executorch_backend.py  litert_backend.py  ncnn_backend.py  onnx_backend.py  registry.py  rknn_backend.py  tensorrt_backend.py  torch_export_backend.py  torchscript_backend.py  types.py
tests/: test_calibration.py  test_cli.py  test_coreml_backend.py  test_doctor.py  test_executorch_backend.py  test_info.py  test_list.py  test_litert_backend.py  test_ncnn_backend.py  test_onnx_backend.py  test_preprocessing.py  test_registry.py  test_rknn_backend.py  test_tensorrt_backend.py  test_torch_export_backend.py  test_torchscript_backend.py
