[project]
name = "timmx"
version = "0.1.0"
description = "Extensible CLI and Python package for exporting timm models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.0.0",
    "timm>=1.0.20",
    "torch>=2.9.1",
    "typer>=0.15.0",
]

[project.optional-dependencies]
onnx = ["onnx==1.20.1", "onnxscript==0.6.2"]
coreml = ["coremltools==9.0"]
litert = ["litert-torch==0.8.0"]
ncnn = ["ncnn==1.0.20260114", "pnnx==20260112"]
all = ["timmx[onnx]", "timmx[coreml]", "timmx[litert]", "timmx[ncnn]"]

[project.scripts]
timmx = "timmx.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "timmx"
module-root = "src"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

