[project]
name = "timmx"
version = "0.1.0"
description = "Extensible CLI and Python package for exporting timm models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rich",
  "timm",
  "torch>=2.5.0",
  "typer",
]

[project.optional-dependencies]
coreml = ["coremltools>=9.0"]
executorch = ["executorch>=1.1.0"]
litert = ["litert-torch>=0.8.0"]
ncnn = ["pnnx"]
onnx = ["onnx>=1.16", "onnxscript"]

[project.scripts]
timmx = "timmx.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "timmx"
module-root = "src"

[tool.uv]
conflicts = [
  [
    { extra = "executorch" },
    { extra = "litert" },
  ],
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
