[project]
name = "timmx"
version = "0.2.1"
description = "Extensible CLI and Python package for exporting timm models."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [{ name = "Youssef Boulaouane", email = "y.boulaouane11@gmail.com" }]
keywords = [
  "coreml",
  "deep-learning",
  "executorch",
  "inference",
  "litert",
  "model-export",
  "onnx",
  "pytorch",
  "tensorrt",
  "timm"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "rich",
  "timm",
  "torch>=2.5.0",
  "typer",
]

[project.optional-dependencies]
coreml = ["coremltools>=9.0"]
executorch = ["executorch>=1.1.0"]
litert = ["litert-torch>=0.8.0"]
ncnn = ["pnnx"]
onnx = ["onnx>=1.16", "onnxscript", "onnxslim"]

[project.scripts]
timmx = "timmx.cli:main"

[project.urls]
Homepage = "https://github.com/Boulaouaney/timmx"
Issues = "https://github.com/Boulaouaney/timmx/issues"
Repository = "https://github.com/Boulaouaney/timmx"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "timmx"
module-root = "src"

[tool.uv]
conflicts = [
  [
    { extra = "executorch" },
    { extra = "litert" },
  ],
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
